--- a/public/html/index.html
+++ b/public/html/index.html
@@ -11,6 +11,6 @@
 <body>
   <div id="app"></div>
 
-  <script src="/static/app.js"></script>
+  <script src="public/js/app.js"></script>
 </body>
 </html>
