--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <title>Home</title>
   <script src="https://code.jquery.com/jquery-1.9.1.min.js" type="text/javascript"></script>
   <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/fabric-core/4.0.0/fabric.min.css">
+  <link rel="stylesheet" href="/public/css/editable.css">
   <script src="https://appsforoffice.microsoft.com/lib/1.1/hosted/Office.js" type="text/javascript"></script>
 </head>
 <body>
   <div id="app"></div>
 
   <script src="/static/app.js"></script>
+  <img src="https://trelloaddin.azureedge.net/trello/ios/css/images/ajax-loader.gif" />
 </body>
 </html>
