--- a/public/html/index.html
+++ b/public/html/index.html
@@ -5,7 +5,7 @@
   <title>Home</title>
   <script src="https://code.jquery.com/jquery-1.9.1.min.js" type="text/javascript"></script>
   <link rel="stylesheet" href="/public/css/editable.css">
-  <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/fabric-core/4.0.0/fabric.min.css">
+  <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/4.1.0/css/fabric.min.css">
   <script src="https://appsforoffice.microsoft.com/lib/1.1/hosted/Office.js" type="text/javascript"></script>
 </head>
 <body>
